--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#2D3E3F"/>
-    <corners android:radius="8dp"/>
-    <stroke
-        android:width="1dp"
-        android:color="#CCCCCC"/>
-    <padding
-        android:left="10dp"
-        android:top="10dp"
-        android:right="10dp"
-        android:bottom="10dp"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_focused="true" android:drawable="@drawable/edit_text_background_focused"/>
+    <item android:drawable="@drawable/edit_text_background_normal"/>
+</selector>
