--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
-        android:text="Cadastrar"
+        android:text="@string/cadastrar"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textStyle="bold|italic" />
