--- a/app/src/main/res/layout/activity_arranchamento.xml
+++ b/app/src/main/res/layout/activity_arranchamento.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:background="#f5f5dc">
 
-    <LinearLayout android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
@@ -19,13 +20,13 @@
             android:textStyle="bold"
             android:gravity="center"
             android:layout_marginBottom="16dp"
-            android:fontFamily="sans-serif"/>
+            android:fontFamily="sans-serif" />
 
         <LinearLayout
-            android:id="@+id/daysContainer"
+            android:id="@+id/weeksContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:gravity="center"
             android:layout_marginBottom="16dp">
         </LinearLayout>
@@ -44,7 +45,7 @@
                 android:text="Exibir mais"
                 android:background="#264d43"
                 android:textColor="#ffffff"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginEnd="8dp" />
 
             <Button
                 android:id="@+id/enviarButton"
@@ -52,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:text="Enviar"
                 android:background="#264d43"
-                android:textColor="#ffffff"/>
+                android:textColor="#ffffff" />
         </LinearLayout>
 
         <ProgressBar
@@ -60,6 +61,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
