--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:text="Carregando..."
+                android:text="Carregando tabela..."
                 android:textColor="#f3ecd6"
                 android:textSize="24sp"
                 android:visibility="visible" />
