--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -33,75 +33,26 @@
                 android:fontFamily="sans-serif"
                 android:gravity="center"
                 android:paddingTop="40dp"
-                android:text="Guerreiros Mais Arranchados"
+                android:text="Refeições de Hoje"
                 android:textColor="#ffffff"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
-            <!--<LinearLayout
+            <TextView
+                android:id="@+id/textViewRefeicoes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:text="" />
 
-                <Button
-                    android:id="@+id/logoutButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:text="Sair" />
-
-                <Button
-                    android:id="@+id/preencherButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:text="Preencher Arranchamento" />
-
-                <Button
-                    android:id="@+id/exportarButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Exportar Arranchamento" />
-            </LinearLayout>-->
-
-            <ScrollView
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/imageViewQR"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fillViewport="true">
-
-                <TableLayout
-                    android:id="@+id/tableLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:stretchColumns="1">
-
-                    <TableRow>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="#526E5E"
-                            android:gravity="center_horizontal"
-                            android:padding="8dp"
-                            android:text="Nome de Guerra"
-                            android:textColor="#ffffff"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="#526E5E"
-                            android:gravity="center_horizontal"
-                            android:padding="8dp"
-                            android:text="Número de Arranchamentos"
-                            android:textColor="#ffffff"
-                            android:textStyle="bold" />
-                    </TableRow>
-                </TableLayout>
-            </ScrollView>
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:contentDescription="QR Code" />
 
             <TextView
                 android:id="@+id/loadingTextView"
@@ -109,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:gravity="center"
-                android:text="Carregando tabela..."
+                android:text="Carregando..."
                 android:textColor="#f3ecd6"
                 android:textSize="24sp"
                 android:visibility="visible" />
