--- a/app/src/main/res/layout/activity_faltas.xml
+++ b/app/src/main/res/layout/activity_faltas.xml
@@ -12,13 +12,21 @@
         android:layout_margin="16dp"
         android:layout_alignParentTop="true" />
 
-    <SurfaceView
-        android:id="@+id/surfaceViewCamera"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="16dp"
+    <Button
+        android:id="@+id/buttonScan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tirar Faltas"
         android:layout_below="@id/spinnerMeals"
-        android:layout_weight="1" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+    <com.journeyapps.barcodescanner.DecoratedBarcodeView
+        android:id="@+id/barcodeView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:layout_below="@id/buttonScan" />
 
     <TextView
         android:id="@+id/loadingTextView"
