--- a/app/src/main/res/layout/activity_exportar.xml
+++ b/app/src/main/res/layout/activity_exportar.xml
@@ -18,7 +18,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#488273"
+            android:background="#526E5E"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
