--- a/app/src/main/res/layout/fragment_faltas.xml
+++ b/app/src/main/res/layout/fragment_faltas.xml
@@ -5,13 +5,28 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="#2D3E3F"
-    android:gravity="center">
+    android:gravity="top"> <!-- Alterado para começar na parte superior -->
 
     <TextView
-        android:id="@+id/textViewFaltas"
+        android:id="@+id/textViewFaltasTitulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:paddingBottom="16dp" />
+
+    <TextView
+        android:id="@+id/textViewFaltasTotal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
+        android:paddingBottom="16dp" />
+
+    <LinearLayout
+        android:id="@+id/linearLayoutFaltas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
-        android:text="" />
+        android:orientation="vertical" />
 </LinearLayout>
